# chatroom

./: Cargo.toml
.gitea/workflow/: ci.yaml
.gitea/workflows/: ci.yaml
.github/workflows/: ci.yaml
etc/: default.toml
etc/config/: dev.toml
src/: lib.rs  main.rs  models.rs  server.rs
src/config/: config.rs  log.rs  mod.rs  model.rs
src/middleware/: auth.rs  datasource.rs  kafka.rs  mod.rs  redis.rs
src/model/: app_chat_group_encrypt_history.rs  app_chat_group_history.rs  app_chat_whisper_history.rs  app_moment.rs  app_moment_comment.rs  app_moment_like.rs  app_moment_like_log.rs  app_moments_image.rs  app_news.rs  app_news_catalog.rs  app_news_comment.rs  app_news_favorite.rs  app_news_favorite_like_log.rs  app_news_like.rs  live_chat_history.rs  live_forbidden_set.rs  live_mobile_nav_bar.rs  live_nav_bar.rs  live_robot_time_set.rs  live_room.rs  live_room_chapter.rs  live_room_chapter_item.rs  live_room_chapter_item_lecturer.rs  live_room_chapter_log.rs  live_room_lecture_vote.rs  live_room_lecturer.rs  live_room_styles.rs  live_room_theme.rs  live_room_user.rs  live_room_user_favorite.rs  live_room_watch_log.rs  live_sensitive_words.rs  live_slideshow_adv.rs  media_channel.rs  media_params.rs  media_push_log.rs  sys_config.rs  sys_contact.rs  sys_dept.rs  sys_dict_data.rs  (+30 more)
src/modules/: mod.rs  route.rs
src/modules/auth/: controller.rs  mod.rs  model.rs  service.rs
src/modules/user/: controller.rs  mod.rs  model.rs  service.rs
src/util/: auth_utils.rs  error.rs
src/websocket/: handler.rs  mod.rs  model.rs  server.rs  session.rs
