[package]
name = "chatroom"
version = "0.1.0"
edition = "2021"

[dependencies]

tokio = { version = "1", features = ["full"] }

# actix web
actix-web = "4"
actix-http = "3"
actix-cors = "0.7"
actix-web-httpauth = "0.8"
actix-web-lab = "0.21.0"
tracing-actix-web = "0.7"

#jwt
argon2 = "0.5"
jsonwebtoken = { version = "9", features = ["use_pem"] }
serde_urlencoded = "0.7"
fancy-regex = "0.13"

# rbatis
rbs = { version = "4.5" }
rbatis = { version = "4.5" }
rbdc-pg = { version = "4.5" }

# logging
log = "0.4"
fast_log = "1.6"

# serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
derive_more = "0.99"

# utils
config = "0.14.0"
lazy_static = "1.5.0"
rand_core = { version = "0.6", features = ["std"] }
fastdate = "0.1"
futures-util = "0.3"

# tracing
tracing = "0.1.19"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
tracing-appender = "0.2"
tracing-log = "0.2"
tracing-error = "0.2"

# redis with tokio
redis = { version = "0.26.1", features = ["tokio-comp", "json"] }
